# 1024_256_patch

./: Makefile  README.md  translate.s  translator.py
include/: addr.h  addr_analysis.h  addr_cfg.h  addr_init.h  asm.h  binary.h  config.h  core.h  cpu.h  globals.h  handle.h  patch.h  utils.h  vector_context.h  vector_translation.h
scripts/: translator.py
src/: addr.cpp  addr_analysis.cpp  addr_cfg.cpp  addr_init.cpp  binary.cpp  config.cpp  cpu.cpp  globals.cpp  handle.cpp  main.cpp  patch.cpp  vector_context.cpp
src/core/: handle.cpp  handler.cpp  patch.cpp
src/utils/: addr.cpp  code_block.cpp  dump.cpp  other.cpp
src/vector_translation/: translation_shared_lib.cpp  vector_context.cpp
test/: CMakeLists.txt
